Fixed bug 138370: [misc] Simplify setup of ContentAssistAction

--- a/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
+++ b/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
@@ -209,6 +209,16 @@ Editor.GotoPreviousAnnotation.label= Pre&vious Annotation
 Editor.GotoPreviousAnnotation.tooltip= Previous Annotation
 Editor.GotoPreviousAnnotation.description= Previous Annotation
 
+Editor.ContentAssistProposal.label=&Content Assist
+Editor.ContentAssistProposal.tooltip=Content Assist
+Editor.ContentAssistProposal.image=
+Editor.ContentAssistProposal.description=Content Assist
+
+Editor.ContentAssistContextInformation.label=S&how Context Information
+Editor.ContentAssistContextInformation.tooltip=Show Context Information
+Editor.ContentAssistContextInformation.QuickAssist.image=
+Editor.ContentAssistContextInformation.description=Show Context Information
+
 Editor.QuickAssist.label=&Quick Fix
 Editor.QuickAssist.tooltip=Quick Fix
 Editor.QuickAssist.image=
