bug 193324: [Sync View] Provide compare editor input for a single file that support editing on both sides

--- a/bundles/org.eclipse.team.ui/plugin.properties
+++ b/bundles/org.eclipse.team.ui/plugin.properties
@@ -74,5 +74,7 @@ CompareLocalHistory.label= &Local History...
 CompareLocalHistory.tooltip= Compare the Selected Resource with Local History
 ReplaceLocalHistory.label= &Local History...
 ReplaceLocalHistory.tooltip= Replace the Selected Resource with Local History
+CompareWithEachOtherAction.label= &Each Other
+CompareWithEachOtherAction.tooltip= Compare the Selected Resources
 
 ignoresTransferName= Team Ignored Resources Transfer
