Bug 256382 - 526 warnings in build N20081124-2000

--- a/tests/org.eclipse.core.tests.runtime/build.properties
+++ b/tests/org.eclipse.core.tests.runtime/build.properties
@@ -16,4 +16,4 @@ bin.includes = plugin.xml,\
                META-INF/,\
                test.xml
 src.includes = about.html
-javacWarnings..=-unchecked,-raw
+javacWarnings.runtimetests.jar=-unchecked,-raw
