257137 [CommonNavigator] add tracing 257138 [CommonNavigator] clean up API meta data on public classes Various small javadoc improvements/spelling corrections

--- a/tests/org.eclipse.ui.tests.navigator/plugin.properties
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.properties
@@ -12,5 +12,6 @@ bundlename=Common Navigator Tests
 
 test.navigator.viewName=Test Navigator Viewer
 test.navigator.programmaticViewName=Test Programmatic Navigator View
-test.navigator.pipelineViewName=Test Pipline View
+test.navigator.overrideViewName=Test Override View
+test.navigator.pipelineViewName=Test Pipeline View
 test.navigator.extension=Test Navigator Extension
