--- a/tests/org.eclipse.ui.tests.navigator/plugin.xml
+++ b/tests/org.eclipse.ui.tests.navigator/plugin.xml
@@ -24,6 +24,12 @@
       <view
             allowMultiple="false"
             class="org.eclipse.ui.navigator.CommonNavigator"
+            id="org.eclipse.ui.tests.navigator.OverrideTestView"
+            name="%test.navigator.overrideViewName"/>            
+
+      <view
+            allowMultiple="false"
+            class="org.eclipse.ui.navigator.CommonNavigator"
             id="org.eclipse.ui.tests.navigator.HideAvailableExtensionsTestView"
             name="Test Hide Available Extensions View"/>            
    </extension>
@@ -33,7 +39,7 @@
             id="org.eclipse.ui.tests.navigator.testContent" 
             name="%test.navigator.extension"
             contentProvider="org.eclipse.ui.tests.navigator.extension.TestContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderBlue"
             activeByDefault="true"
             priority="higher">
          <triggerPoints>
@@ -110,7 +116,7 @@
       <navigatorContent
             contentProvider="org.eclipse.ui.tests.navigator.extension.TestContentProvider"
             id="org.eclipse.ui.tests.navigator.testContent2"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderBlue"
             name="Test Navigator Extension [Programmatic Binding]">
 	     <triggerPoints>
             <instanceof value="org.eclipse.core.resources.IProject"/>
@@ -197,7 +203,7 @@
             id="org.eclipse.ui.tests.navigator.testHasChildren" 
             name="Dat File Content Extension"
             contentProvider="org.eclipse.ui.tests.navigator.extension.DatContentProvider"
-            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderBlue"
             activeByDefault="true"
             priority="lower">
          <triggerPoints>
@@ -210,6 +216,56 @@
          </triggerPoints> 
          <possibleChildren> 
          </possibleChildren> 
+	  </navigatorContent>      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testOverriddenContent1" 
+            name="Test Content 1"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderRed"
+            priority="lower">
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testOverriddenContent2" 
+            name="Test Content 2"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderBlue"
+            priority="lower">
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+	  </navigatorContent>      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testOverride1" 
+            name="Override 1"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderGreen"
+            priority="lower">
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testOverriddenContent1"/>
+	  </navigatorContent>      
+      <navigatorContent 
+            id="org.eclipse.ui.tests.navigator.testOverride2" 
+            name="Override 2"
+            contentProvider="org.eclipse.ui.internal.navigator.resources.workbench.ResourceExtensionContentProvider"
+            labelProvider="org.eclipse.ui.tests.navigator.extension.TestLabelProviderCyan"
+            priority="lower">
+         <enablement>
+            <instanceof
+                  value="org.eclipse.core.resources.IResource">
+            </instanceof>
+         </enablement>
+		<override suppressedExtensionId="org.eclipse.ui.tests.navigator.testOverriddenContent2"/>
 	  </navigatorContent>      
    </extension>
 
@@ -286,6 +342,13 @@
       </viewerActionBinding>
       <viewer viewerId="org.eclipse.ui.tests.navigator.ProgrammaticTestView"/>      
       <viewer viewerId="org.eclipse.ui.tests.navigator.PipelineTestView"/>      
+      <viewer viewerId="org.eclipse.ui.tests.navigator.OverrideTestView"/>      
+      <viewerContentBinding viewerId="org.eclipse.ui.tests.navigator.OverrideTestView">
+          <includes>
+       	      <contentExtension pattern="org.eclipse.ui.tests.navigator.testOverride1" />		       	      
+       	      <contentExtension pattern="org.eclipse.ui.tests.navigator.testOverriddenContent1" />		       	      
+          </includes>
+      </viewerContentBinding>
    </extension>
  
    <extension
