--- a/org.eclipse.help/preferences.ini
+++ b/org.eclipse.help/preferences.ini
@@ -1,9 +1,6 @@
 # Toc ordering.  Ordered list of help TOC's (books) as they would appear
 # on the bookshelf. All the other TOCS will be follow these books.
 # Non-present TOC's on this list will be ignored. Use the location of each TOC
-# as /pluginId/path/to/toc.xml.
-baseTOCS= /org.eclipse.platform.doc.user/toc.xml,\
-          /org.eclipse.jdt.doc.user/toc.xml,\
-          /org.eclipse.platform.doc.isv/toc.xml,\
-          /org.eclipse.jdt.doc.isv/toc.xml,\
-          /org.eclipse.pde.doc.user/toc.xml
+# as /pluginId/path/to/toc.xml. This option is deprecated, 
+# use org.eclipse.help.base.HELP_DATA instead
+baseTOCS= 
