--- a/tests/org.eclipse.core.tests.resources/plugin.xml
+++ b/tests/org.eclipse.core.tests.resources/plugin.xml
@@ -181,7 +181,7 @@
    </runtime>
 </extension>
 <extension
-      point="org.eclipse.core.runtime.contentTypes">
+      point="org.eclipse.core.contenttype.contentTypes">
    <content-type      
          name="My Content Type 2"
          id="myContent2"
@@ -204,7 +204,7 @@
          base-type="org.eclipse.core.tests.resources.nature_associated_1"/>
 </extension>
 <extension
-         point="org.eclipse.core.runtime.contentTypes">      
+         point="org.eclipse.core.contenttype.contentTypes">      
       <content-type      
             name="My Content Type"
             id="myContent"
@@ -417,7 +417,7 @@
             base-type="org.eclipse.core.runtime.xml"
             name="Root Element"
             id="root-element"
-            describer="org.eclipse.core.runtime.content.XMLRootElementContentDescriber:org.eclipse.core.runtime.tests.root-element"/>
+            describer="org.eclipse.core.runtime.content.XMLRootElementContentDescriber:org.eclipse.core.resources.tests.root-element"/>
       <content-type
             base-type="org.eclipse.core.runtime.xml"
             name="Root Element in namespace"
@@ -434,7 +434,7 @@
             id="ns-wildcard">
          <describer
                class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber2">
-            <parameter name="element" value="*/org.eclipse.core.runtime.tests.some.dtd3"/>
+            <parameter name="element" value="*/org.eclipse.core.resources.tests.some.dtd3"/>
             <parameter name="element" value="{urn:eclipse.core.runtime.nsWild}*"/>
          </describer>
       </content-type>
@@ -456,7 +456,7 @@
             id="dtd">
          <describer
                class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
-            <parameter name="dtd" value="org.eclipse.core.runtime.tests.some.dtd"/>
+            <parameter name="dtd" value="org.eclipse.core.resources.tests.some.dtd"/>
          </describer>
       </content-type>      
       <!-- this content type is used by the content description tests -->
