--- a/tests/org.eclipse.core.tests.resources/build.properties
+++ b/tests/org.eclipse.core.tests.resources/build.properties
@@ -14,7 +14,8 @@ bin.includes = plugin.xml,\
                MultipleProjectTestFiles/,\
                about.html,\
                META-INF/,\
-               test.xml
+               test.xml,\
+               Plugin_Testing/
 src.includes = about.html
                
 
