Bug 259499  [Webapp] In Infocenter, add a parameter that toggles "Link with Contents"

--- a/org.eclipse.help.base/preferences.ini
+++ b/org.eclipse.help.base/preferences.ini
@@ -80,6 +80,9 @@ advanced.toolbarFont=icon
 # Value is used in browsers that display advanced help UI.
 advanced.viewFont=icon
 
+# Initial value for whether toc is synchronized with contents
+advanced.syncDefault=true
+
 # Background color for toolbars.
 # Value is used in browsers displaying basic help UI.
 basic.toolbarBackground=#D4D0C8
