--- a/bundles/org.eclipse.core.filesystem/natives/macosx/Makefile
+++ b/bundles/org.eclipse.core.filesystem/natives/macosx/Makefile
@@ -1,5 +1,5 @@
 #**********************************************************************
-# Copyright (c) 2000, 2005 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials 
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 LIB_NAME = liblocalfile_1_0_0.jnilib
 
 core:
-	cc -I /System/Library/Frameworks/JavaVM.framework/Headers localfile.c -o $(LIB_NAME) -bundle -framework JavaVM -framework CoreServices
+	cc -I /System/Library/Frameworks/JavaVM.framework/Headers localfile.c -o $(LIB_NAME) -bundle -framework JavaVM -framework CoreServices -arch i386 -arch ppc -arch x86_64
 
 clean:
 	rm *.o
