Bug 19771: [typing] Add column based editing capabilities to textual editors

--- a/org.eclipse.ui.workbench.texteditor/plugin.properties
+++ b/org.eclipse.ui.workbench.texteditor/plugin.properties
@@ -7,6 +7,7 @@
 #
 # Contributors:
 #     IBM Corporation - initial API and implementation
+#     Tom Eicher (Avaloq Evolution AG) - block selection mode
 ###############################################################################
 pluginName= Text Editor Framework
 providerName= Eclipse.org
@@ -31,6 +32,10 @@ showWhitespaceCharacters.description= Shows whitespace characters in current tex
 
 showInformation.name= Show Tooltip Description
 showInformation.description= Displays information for the current caret location in a sticky hover
+
+toggleColumnMode.label= Enable Block Selection
+toggleColumnMode.tooltip= Enables block selection mode
+toggleColumnMode.description= Enable block / column selection in the current text editor
 
 smartEnter.label= Insert Line Below Current Line
 smartEnter.description= Adds a new line below the current line
@@ -169,3 +174,5 @@ command.joinLines.name = Join Lines
 
 SpellingEngine= Spelling Engine
 
+columnModeFont.label= Text Editor Block Selection Font
+columnModeFont.description= The block selection mode font is used by text editors in block (column) mode. A monospace font should be used.
