--- a/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
+++ b/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
@@ -7,6 +7,7 @@
 #
 # Contributors:
 #     IBM Corporation - initial API and implementation
+#     Tom Eicher (Avaloq Evolution AG) - block selection mode
 ###############################################################################
 
 Editor.Undo.label=&Undo
@@ -238,3 +239,8 @@ Editor.ShowInformation.label= Show T&ooltip Description
 Editor.ShowInformation.tooltip= Shows the Tooltip Description
 Editor.ShowInformation.image=
 Editor.ShowInformation.description= Displays information for the current caret location in a sticky hover
+
+Editor.ToggleColumnMode.label= Toggle Column Mode
+Editor.ToggleColumnMode.description= Enable rectangular / column selection in the current text editor
+Editor.ToggleColumnMode.image=
+Editor.ToggleColumnMode.tooltip= Toggle Column Selection Mode
