Block selection mode clean up.

--- a/org.eclipse.ui.workbench.texteditor/plugin.properties
+++ b/org.eclipse.ui.workbench.texteditor/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -33,9 +33,9 @@ showWhitespaceCharacters.description= Shows whitespace characters in current tex
 showInformation.name= Show Tooltip Description
 showInformation.description= Displays information for the current caret location in a sticky hover
 
-toggleColumnMode.label= Enable Block Selection
-toggleColumnMode.tooltip= Enables block selection mode
-toggleColumnMode.description= Enable block / column selection in the current text editor
+toggleBlockSelectionMode.label= Enable Block Selection
+toggleBlockSelectionMode.tooltip= Enable Block Selection
+toggleBlockSelectionMode.description= Enable block / column selection in the current text editor
 
 smartEnter.label= Insert Line Below Current Line
 smartEnter.description= Adds a new line below the current line
@@ -174,5 +174,5 @@ command.joinLines.name = Join Lines
 
 SpellingEngine= Spelling Engine
 
-columnModeFont.label= Text Editor Block Selection Font
-columnModeFont.description= The block selection mode font is used by text editors in block (column) mode. A monospace font should be used.
+blockSelectionModeFont.label= Text Editor Block Selection Font
+blockSelectionModeFont.description= The block selection mode font is used by text editors in block (column) mode. A monospace font should be used.
