--- a/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
+++ b/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/ConstructedEditorMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -240,7 +240,7 @@ Editor.ShowInformation.tooltip= Shows the Tooltip Description
 Editor.ShowInformation.image=
 Editor.ShowInformation.description= Displays information for the current caret location in a sticky hover
 
-Editor.ToggleColumnMode.label= Toggle Column Mode
-Editor.ToggleColumnMode.description= Enable rectangular / column selection in the current text editor
-Editor.ToggleColumnMode.image=
-Editor.ToggleColumnMode.tooltip= Toggle Column Selection Mode
+Editor.ToggleBlockSelectionMode.label= Toggle Block Selection Mode
+Editor.ToggleBlockSelectionMode.description= Enable block / column selection in the current text editor
+Editor.ToggleBlockSelectionMode.image=
+Editor.ToggleBlockSelectionMode.tooltip= Toggle Block Selection Mode
