--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -4,10 +4,13 @@
    <extension
          point="org.eclipse.e4.services">
       <servicefactory
-            class="org.eclipse.e4.demo.e4photo.ServiceFactory">
+            class="org.eclipse.e4.demo.e4photo.WorkspaceValue">
          <service
                api="org.eclipse.core.resources.IWorkspace">
          </service>
+      </servicefactory>
+      <servicefactory
+            class="org.eclipse.e4.demo.e4photo.RealmValue">
          <service
                api="org.eclipse.core.databinding.observable.Realm">
          </service>
