--- a/tests/org.eclipse.e4.ui.tests.css.core/.project
+++ b/tests/org.eclipse.e4.ui.tests.css.core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.e4.ui.tests.core</name>
+	<name>org.eclipse.e4.ui.tests.css.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
