--- a/examples/org.eclipse.ui.examples.job/plugin.xml
+++ b/examples/org.eclipse.ui.examples.job/plugin.xml
@@ -70,7 +70,7 @@
                class="org.eclipse.ui.examples.jobs.actions.DebugJobManagerAction"
                tooltip="Dump job information"
                menubarPath="sampleMenu/sampleGroup"
-               id="org.eclipse.ui.examples.jobs.actions.SuspendJobManagerAction">
+			   id="org.eclipse.ui.examples.jobs.actions.DebugJobManagerAction">
          </action>
       </actionSet>
    </extension>
