Bug 231611 [Contributions] Provide a project configure context menu

--- a/bundles/org.eclipse.ui.ide.application/plugin.properties
+++ b/bundles/org.eclipse.ui.ide.application/plugin.properties
@@ -19,3 +19,6 @@ Perspective.resourceDescription = This perspective is designed to provide genera
 updateMenu.label = &Software Updates
 actionSets.updates.label = &Find and Install...
 actionSets.configManager.label = &Manage Configuration...
+
+projectConfigure.label = Configure
+projectConfigure.mnemonic = g
