--- a/bundles/org.eclipse.ui.ide.application/plugin.xml
+++ b/bundles/org.eclipse.ui.ide.application/plugin.xml
@@ -70,5 +70,33 @@
                </command>
        </menu>
        </menuContribution>
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <menu
+               id="org.eclipse.ui.projectConfigure"
+               label="%projectConfigure.label"
+               mnemonic="%projectConfigure.mnemonic">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="activeMenuSelection">
+                  <iterate
+                        ifEmpty="false">
+                     <adapt
+                           type="org.eclipse.core.resources.IProject">
+                        <test
+                              property="org.eclipse.core.resources.open"
+                              value="true">
+                        </test>
+                     </adapt>
+                  </iterate>
+               </with>
+            </visibleWhen>
+            <separator
+                  name="additions"
+                  visible="false">
+            </separator>
+         </menu>
+      </menuContribution>
    </extension>
 </plugin>
