Fux for Bug 228110 - [Markers] Problems view: Improve 'Warnings on Selection'

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -263,6 +263,8 @@ OpenAnother.Mnemonic = V
 
 MarkerFilterGrouping.AllErrors = All Errors
 MarkerFilterGrouping.SelectedWarnings = Warnings on Selection
+MarkerFilterGrouping.SelectedErrorsWarnings = Errors/Warnings on Selection
+MarkerFilterGrouping.ProjectErrorsWarnings = Errors/Warnings on Project
 MarkerFilterGrouping.TODO = TODOs
 PropertyPage.Markers = Marker
 PreferencePage.Markers = Markers
