bug 189490 [CommonNavigator] Go To->Resource won't enable bug 189492 [CommonNavigator] Project Explorer - Go Into won't enable

--- a/bundles/org.eclipse.ui.navigator.resources/plugin.properties
+++ b/bundles/org.eclipse.ui.navigator.resources/plugin.properties
@@ -12,6 +12,7 @@ Plugin.name = Navigator Workbench Components
 Plugin.providerName = Eclipse.org 
 
 resource.extension.name=Resources
+resourceGoTo.extension.name=Resources Go To
 workingsets.extension.name=Working Sets
 Common_Resource_Navigator=Project Explorer
  
