--- a/bundles/org.eclipse.ui.navigator.resources/plugin.xml
+++ b/bundles/org.eclipse.ui.navigator.resources/plugin.xml
@@ -7,7 +7,7 @@
          point="org.eclipse.ui.views">
       <view
             category="org.eclipse.ui"
-            class="org.eclipse.ui.navigator.CommonNavigator"
+            class="org.eclipse.ui.navigator.resources.ProjectExplorer"
             icon="$nl$/icons/full/eview16/resource_persp.gif"
             id="org.eclipse.ui.navigator.ProjectExplorer"
             name="%Common_Resource_Navigator"/>
@@ -143,8 +143,6 @@
 		         </enablement>
 			</commonWizard>              
       </navigatorContent>
-      
-      <!-- Action Providers -->
       <actionProvider 
       			id="org.eclipse.ui.navigator.resources.OpenActions"
 				class="org.eclipse.ui.internal.navigator.resources.actions.OpenActionProvider">
@@ -153,7 +151,41 @@
 					<adapt type="org.eclipse.core.resources.IFile" /> 	
 				</or>
 			</enablement>
-		</actionProvider> 
+		</actionProvider>
+      <actionProvider
+            class="org.eclipse.ui.internal.navigator.resources.actions.GotoActionProvider"
+            id="org.eclipse.ui.navigator.resources.GotoActions">
+			<enablement>
+				<or>
+					<adapt type="org.eclipse.core.resources.IResource" /> 	
+					<adapt type="org.eclipse.ui.IWorkingSet" /> 	
+				</or>
+			</enablement>
+      </actionProvider>
+      <actionProvider
+            class="org.eclipse.ui.internal.navigator.resources.actions.GoIntoActionProvider"
+            id="org.eclipse.ui.navigator.resources.GoIntoActions">
+			<enablement>
+				<and>
+				    <!--
+					<with variable="selection">
+						<count value="1"/>
+					</with>
+					-->
+					<or>
+						<and>
+							<adapt type="org.eclipse.core.resources.IProject" />
+							<test property="org.eclipse.core.resources.open" 
+                            	value="true"/>
+						</and>
+						<adapt type="org.eclipse.core.resources.IFolder" /> 	
+						<adapt type="org.eclipse.ui.IWorkingSet" /> 	
+					</or>
+				</and>
+			</enablement>
+      </actionProvider>
+      
+      <!-- Action Providers --> 
 		<actionProvider 
         		id="org.eclipse.ui.navigator.resources.PortingActions"
 				class="org.eclipse.ui.internal.navigator.resources.actions.PortingActionProvider">
