Fix for Bug 230988 [Workbench] NPE in OpenNavigatorFolderTest

--- a/tests/org.eclipse.ui.tests.performance/build.properties
+++ b/tests/org.eclipse.ui.tests.performance/build.properties
@@ -12,4 +12,5 @@ source.uiperformance.jar = src/
 bin.includes = META-INF/,\
                *.xml,\
                icons/,\
-               uiperformance.jar
+               uiperformance.jar,\
+               data/
