Bug 260762  [Help][Search] Ability to search within selected toc or topic

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -27,6 +27,7 @@ PrintMulti=Print topics
 PrintTopic=Print selected topic
 PrintToc=Print selected topic and all subtopics
 PrintError=You must select a valid topic to print
+QuickSearch=Search selected topic and all subtopics
 TocHeading=Contents
 Close=Close
 Nothing_found=Nothing found.
@@ -37,6 +38,8 @@ GO=GO
 doSearch=To search the documentation, type a query in the Search field. The search results will be shown in this view.
 Advanced=Advanced Search
 SearchExpression=Search Expression
+SearchExpressionColon=&Search Expression:
+QuickSearchError=You must select a valid topic to search
 PotentialHit={0} (potential hit)
 expression_label = * = any string, ? = any character, "" = phrase, AND, OR, NOT = boolean operators 
 Cancel=Cancel
