bug 262101 [CommonNavigator] Make the  GoIntoActionProvider API so JDT can use it

--- a/bundles/org.eclipse.ui.navigator.resources/plugin.xml
+++ b/bundles/org.eclipse.ui.navigator.resources/plugin.xml
@@ -163,7 +163,7 @@
 			</enablement>
       </actionProvider>
       <actionProvider
-            class="org.eclipse.ui.internal.navigator.resources.actions.GoIntoActionProvider"
+            class="org.eclipse.ui.navigator.resources.GoIntoActionProvider"
             id="org.eclipse.ui.navigator.resources.GoIntoActions">
 			<enablement>
 				<and>
